--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
   ],
   "license": "MIT",
   "dependencies": {
-    "angular": "^1.5.8",  
-    "angular-animate": "^1.5.9",  
-    "angular-touch": "^1.5.9",   
-    "angular-ui-bootstrap": "^2.3.0", 
+    "angular": "^1.5.8",
+    "angular-animate": "^1.5.9",
+    "angular-chart.js": "^1.1.1",
+    "angular-touch": "^1.5.9",
+    "angular-ui-bootstrap": "^2.3.0",
     "angular-ui-router": "^0.2.17",
     "babel-preset-es2015": "^6.3.13",
     "babelify": "^7.2.0",
